# NAS_KD

./: README.md  architect.py  baseline_train.py  genotypes.py  get_img.py  model.py  model_search.py  netrontest.py  onnxtest.py  operations.py  predict.py  pytorch2onnx.py  separate_loss.py  summary.py  test1.py  train.py  train_kd.py  train_search.py  train_search_kd.py  utils.py
MNN/: CMakeLists.txt  main.cpp  tiny_model-smi.mnn  tiny_model-smi.onnx
onnxmodels/: densenet201_stu-cifar10.onnx  densenet201_stu-vege.onnx  inceptionv3_stu-cifar10.onnx  resnet152_stu-cifar10.onnx  resnet152_stu-vege.onnx  vgg19_stu-cifar10.onnx
teachermodel/: densenet.py  resnet.py  vgg.py
